Refactor item service for consistency and readability
- Adjusted Javadoc comments in `ItemService` for improved clarity and formatting.
- Replaced `collect(Collectors.toList())` with `toList()` in `CategoryController` for simplicity.
- Introduced `BAD_REQUEST` constant in `GlobalExceptionHandler` to reduce redundancy.
- Minor improvements to comments and code structure in `ItemServiceImpl`.